syntax = "proto3";

option java_package = "in.ashwanthkumar.suuchi.examples.rpc.generated";
option java_outer_classname = "SuuchiRPC";

// The Ping service definition.
service PingService {
    rpc Ping (PingRequest) returns (PingResponse);
}
message PingRequest {
}
message PingResponse {
    bool status = 1;
}

// Read service which can be used for serving read-only datasets
service Read {
    rpc Get (GetRequest) returns (GetResponse);
}
message GetRequest {
    bytes key = 1;
}
message GetResponse {
    bytes key = 1;
    bytes value = 2;
}

// Put service which can be used for taking in writes
service Put {
    rpc Put (PutRequest) returns (PutResponse);
}
message PutRequest {
    bytes key = 1;
    bytes value = 2;
}
message PutResponse {
    bool status = 1;
}

// Shards service which can be used for getting all Shard details
service Shards {
    rpc Info (ShardInfoRequest) returns (ShardInfoResponse);
}

message ShardInfoRequest {
}
message ShardInfoResponse {
    repeated Shard shard = 1;
}
message Shard {
    int32 start = 1;
    int32 end = 2;

    repeated Node nodes = 3;
}
message Node {
    string host = 1;
    int32 port = 2;
}

// Scan service is used for doing streaming Reads over a range of data
service Scan {
    rpc Scan (ScanRequest) returns (stream ScanResponse);
}
message ScanRequest {
    int32 start = 1;
    int32 end = 2;
}
message ScanResponse {
    KV kv = 1;
}
message KV {
    bytes key = 1;
    bytes value = 2;
}

// Aggregator service is used for doing reduce and re-reduce operations; otherwise also known as scatter-gather
// request paradigm.
service Aggregator {
    rpc aggregate (AggregateRequest) returns (AggregateResponse);
}
message AggregateRequest {
}
message AggregateResponse {
    int64 output = 1;
}
